# tornado_xstatic

./: .gitignore  LICENSE  README.rst  eg_template.html  example.py  flit.ini  pyproject.toml  setup.py  tornado_xstatic.py
